--- a/html/Login.html
+++ b/html/Login.html
@@ -14,13 +14,8 @@
             <label> User Name :</label>
             <input id="luser" type="email" placeholder="Enter Email" required><br/><br>
             <label> College Name :</label>
-            <input list="name" id="lpass" type="text" placeholder="College Name" required><br/><br>
-            <datalist id="name">
-                <option value="VVIT"></option>
-                <option value="KITS"></option>
-                <option value="RVRJC"></option>
-                <option value="NEC"></option>
-            </datalist>
+            <input id="lpass" type="text" placeholder="College Name" required><br/><br>
+            
             <div class="cls3"><input class="btn1" type="submit" value="Login"></div>
         </form>
     </body>
